--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,6 @@ dependencies {
 
     implementation "com.squareup.moshi:moshi:1.9.3"
     implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
-
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
@@ -65,6 +64,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
     implementation "androidx.room:room-runtime:2.4.1"
+    implementation("androidx.room:room-ktx:2.4.1")
+    annotationProcessor("androidx.room:room-compiler:2.4.1")
     kapt "androidx.room:room-compiler:2.4.1"
 
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
